Added: delete a single project
